app/assets/stylesheets/scaffolds.scss
* {
  margin: 0;
  padding: 0;
 }

h1 {
  color: fuchsia;
  background-color: navy;
  padding: 1em;
  font-size: 3em;
  margin: 0;
  text-align: center;
}

body {
  background-color: #fff;
  color: #050505;
  border: .4em solid navy;
  margin: 1em;
}

table {
  padding: 0 2em;
}

body, p, ol, ul, td {
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: 1em;
  line-height: 1.5em; }

pre {
  background-color: #eee;
  padding: 10px;
  font-size: 11px; 
}

a {
  color: #000; }

a:visited {
  color: #902D41; }

a:hover {
  color: #fff;
  background-color: #000; }

th {
  padding: .5em 2em; }

td {
  padding: .5em 2em; }

div.field,
div.actions {
  margin-bottom: 10px; 
  padding: 0 3em;
}

.link {
  margin: 2em;
  color: #902D41;
}

#notice {
  color: green; 
  background-color: navy } 

.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table; }

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px 7px 0;
  margin-bottom: 20px;
  background-color: #f0f0f0; }

#error_explanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: -7px -7px 0;
  background-color: #c00;
  color: #fff; }

#error_explanation ul li {
  font-size: 12px;
  list-style: square; }

label {
  display: block; 
}

.show, .edit, .add {
  padding: 0 3em;
}

@media only screen and (max-width: 600px) {
  body {
    font-size: .8em;
  }

  h1 {
    font-size: 2em;
    padding: .5em;
    text-align: center;
    margin: 0;
  }

  table {
    padding: 0;
  }
  
  td {
    padding: .2em;
    margin: 0em;
  }

  th {
    text-align: left;
    padding: .2em;
    margin: 0em;
  }

  .desktop {
    display: none;
  }
}

